--- a/SampleMultiview/ExerciseDetail.xib
+++ b/SampleMultiview/ExerciseDetail.xib
@@ -48,6 +48,7 @@
 								<object class="NSPSMatrix" key="NSFrameMatrix"/>
 								<string key="NSFrame">{{252, 20}, {374, 56}}</string>
 								<reference key="NSSuperview" ref="1048429891"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="678505337"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -95,6 +96,7 @@
 														<object class="NSPSMatrix" key="NSFrameMatrix"/>
 														<string key="NSFrame">{{520, 65}, {37, 37}}</string>
 														<reference key="NSSuperview" ref="53813933"/>
+														<reference key="NSWindow"/>
 														<bool key="IBUIOpaque">NO</bool>
 														<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 														<int key="IBUIContentHorizontalAlignment">0</int>
@@ -135,6 +137,7 @@
 																<object class="NSPSMatrix" key="NSFrameMatrix"/>
 																<string key="NSFrameSize">{487, 127}</string>
 																<reference key="NSSuperview" ref="880963530"/>
+																<reference key="NSWindow"/>
 																<reference key="NSNextKeyView" ref="956294132"/>
 																<object class="NSColor" key="IBUIBackgroundColor" id="163243084">
 																	<int key="NSColorSpace">3</int>
@@ -146,6 +149,7 @@
 														<object class="NSPSMatrix" key="NSFrameMatrix"/>
 														<string key="NSFrame">{{20, 20}, {492, 126}}</string>
 														<reference key="NSSuperview" ref="53813933"/>
+														<reference key="NSWindow"/>
 														<reference key="NSNextKeyView" ref="290402998"/>
 														<reference key="IBUIBackgroundColor" ref="163243084"/>
 														<bool key="IBUIClipsSubviews">YES</bool>
@@ -155,6 +159,7 @@
 												<object class="NSPSMatrix" key="NSFrameMatrix"/>
 												<string key="NSFrame">{{20, 20}, {566, 166}}</string>
 												<reference key="NSSuperview" ref="291226198"/>
+												<reference key="NSWindow"/>
 												<reference key="NSNextKeyView" ref="880963530"/>
 												<object class="NSColor" key="IBUIBackgroundColor">
 													<int key="NSColorSpace">1</int>
@@ -166,6 +171,7 @@
 										<object class="NSPSMatrix" key="NSFrameMatrix"/>
 										<string key="NSFrameSize">{606, 206}</string>
 										<reference key="NSSuperview" ref="678505337"/>
+										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="53813933"/>
 										<object class="NSColor" key="IBUIBackgroundColor">
 											<int key="NSColorSpace">3</int>
@@ -177,6 +183,7 @@
 								<object class="NSPSMatrix" key="NSFrameMatrix"/>
 								<string key="NSFrame">{{20, 84}, {606, 206}}</string>
 								<reference key="NSSuperview" ref="1048429891"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="291226198"/>
 								<reference key="IBUIBackgroundColor" ref="163243084"/>
 								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -185,6 +192,7 @@
 						<object class="NSPSMatrix" key="NSFrameMatrix"/>
 						<string key="NSFrameSize">{646, 472}</string>
 						<reference key="NSSuperview" ref="191373211"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="420885805"/>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">1</int>
@@ -196,6 +204,7 @@
 				</array>
 				<string key="NSFrame">{{0, 20}, {646, 472}}</string>
 				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
 					<bytes key="NSWhite">MQA</bytes>
@@ -224,31 +233,21 @@
 					<object class="IBCocoaTouchOutletCollectionConnection" key="connection">
 						<string key="label">gestureRecognizers</string>
 						<reference key="source" ref="191373211"/>
-						<reference key="destination" ref="908232494"/>
-						<string key="cachedDesigntimeCollectionClassName">NSArray</string>
-						<bool key="addsContentToExistingCollection">YES</bool>
-					</object>
-					<int key="connectionID">61</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletCollectionConnection" key="connection">
-						<string key="label">gestureRecognizers</string>
-						<reference key="source" ref="191373211"/>
-						<reference key="destination" ref="407509207"/>
-						<string key="cachedDesigntimeCollectionClassName">NSArray</string>
-						<bool key="addsContentToExistingCollection">YES</bool>
-					</object>
-					<int key="connectionID">62</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletCollectionConnection" key="connection">
-						<string key="label">gestureRecognizers</string>
-						<reference key="source" ref="191373211"/>
 						<reference key="destination" ref="967644847"/>
 						<string key="cachedDesigntimeCollectionClassName">NSArray</string>
 						<bool key="addsContentToExistingCollection">YES</bool>
 					</object>
 					<int key="connectionID">63</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletCollectionConnection" key="connection">
+						<string key="label">gestureRecognizers</string>
+						<reference key="source" ref="420885805"/>
+						<reference key="destination" ref="407509207"/>
+						<string key="cachedDesigntimeCollectionClassName">NSArray</string>
+						<bool key="addsContentToExistingCollection">YES</bool>
+					</object>
+					<int key="connectionID">65</int>
 				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -1165,9 +1164,20 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">63</int>
+			<int key="maxID">65</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes"/>
+		<object class="IBClassDescriber" key="IBDocument.Classes">
+			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<object class="IBPartialClassDescription">
+					<string key="className">NSLayoutConstraint</string>
+					<string key="superclassName">NSObject</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/NSLayoutConstraint.h</string>
+					</object>
+				</object>
+			</array>
+		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBIPadFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
