--- a/SampleMultiview/Storyboard.storyboard
+++ b/SampleMultiview/Storyboard.storyboard
@@ -338,7 +338,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="BW7-km-DJ7" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1854" y="154"/>
+            <point key="canvasLocation" x="-1352" y="-1302"/>
         </scene>
         <!--Edit RestUI Picker View Controller-->
         <scene sceneID="r4F-mc-Glw">
@@ -362,7 +362,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x8h-oM-Eyc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1308" y="154"/>
+            <point key="canvasLocation" x="-1212" y="-1678"/>
         </scene>
         <!--Edit WeightUI Picker View Controller-->
         <scene sceneID="Vmk-uR-gdO">
@@ -386,7 +386,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="14j-wW-BeO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1524" y="154"/>
+            <point key="canvasLocation" x="-1428" y="-1678"/>
         </scene>
         <!--Exercise Detail View Controller-->
         <scene sceneID="44e-FG-f8P">
@@ -405,14 +405,17 @@
                                 <rect key="frame" x="0.0" y="148" width="646" height="346"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
-                                    <label opaque="NO" clipsSubviews="YES" contentMode="left" text="Weight Exercise Name" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" id="tSw-LJ-1ts">
-                                        <rect key="frame" x="252" y="20" width="374" height="56"/>
+                                    <label opaque="NO" clipsSubviews="YES" contentMode="left" text="Weight Exercise Name" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" id="tSw-LJ-1ts" userLabel="Exercise name">
+                                        <rect key="frame" x="338" y="20" width="288" height="56"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <gestureRecognizers/>
                                         <fontDescription key="fontDescription" type="system" pointSize="28"/>
                                         <color key="textColor" red="1" green="0.95470577850000005" blue="0.3541325145" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                         <color key="shadowColor" red="0.54669563139999999" green="0.42245924369999999" blue="0.11603397610000001" alpha="1" colorSpace="calibratedRGB"/>
+                                        <connections>
+                                            <outletCollection property="gestureRecognizers" destination="vef-aC-cYC" appends="YES" id="tIo-yu-6H9"/>
+                                        </connections>
                                     </label>
                                     <view contentMode="scaleToFill" id="xpd-fQ-oBT" userLabel="Exercise container">
                                         <rect key="frame" x="20" y="84" width="606" height="206"/>
@@ -437,6 +440,9 @@
                                                                 <state key="highlighted">
                                                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                                 </state>
+                                                                <connections>
+                                                                    <action selector="addSet:" destination="OZG-Zj-V9Z" eventType="touchUpInside" id="YUb-oE-Coh"/>
+                                                                </connections>
                                                             </button>
                                                             <view clipsSubviews="YES" contentMode="scaleToFill" id="XXy-7O-wCL" userLabel="Rep scroll view" customClass="UIScrollView">
                                                                 <rect key="frame" x="20" y="20" width="492" height="126"/>
@@ -476,16 +482,22 @@
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
                     <connections>
                         <outlet property="name" destination="tSw-LJ-1ts" id="9Q2-L3-mad"/>
-                        <outlet property="repContainer" destination="iyU-3T-KMM" id="RgV-uZ-Sbf"/>
+                        <outlet property="repContainer" destination="t4k-lv-75C" id="Nfr-ic-Y1v"/>
                         <outlet property="repScrollView" destination="XXy-7O-wCL" id="zFt-CA-cKR"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="M8a-Ez-hDu" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <tapGestureRecognizer id="eRN-I8-ITo" userLabel="Program Name Tap Gesture"/>
-                <tapGestureRecognizer id="vef-aC-cYC" userLabel="Name Tap Gesture"/>
+                <tapGestureRecognizer id="vef-aC-cYC" userLabel="Name Tap Gesture">
+                    <connections>
+                        <segue destination="Qmn-vo-TBb" kind="popover" identifier="editName" popoverAnchorView="tSw-LJ-1ts" id="nHE-Us-D81">
+                            <popoverArrowDirection key="popoverArrowDirection" up="YES" down="YES" left="YES" right="YES"/>
+                        </segue>
+                    </connections>
+                </tapGestureRecognizer>
                 <tapGestureRecognizer id="hMU-Ba-qX6" userLabel="Weight Tap Gesture"/>
             </objects>
-            <point key="canvasLocation" x="-1712" y="-1543"/>
+            <point key="canvasLocation" x="-2304" y="-1515"/>
         </scene>
         <!--Exercise View Controller-->
         <scene sceneID="QcM-bn-2gg">
@@ -828,7 +840,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kjS-k6-pGN" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1420" y="154"/>
+            <point key="canvasLocation" x="-1324" y="-1678"/>
         </scene>
     </scenes>
     <resources>
@@ -865,6 +877,7 @@
         <class className="ExerciseDetailViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/ExerciseDetailViewController.h"/>
             <relationships>
+                <relationship kind="action" name="addSet:"/>
                 <relationship kind="outlet" name="name" candidateClass="UILabel"/>
                 <relationship kind="outlet" name="repContainer" candidateClass="UIView"/>
                 <relationship kind="outlet" name="repScrollView" candidateClass="UIScrollView"/>
@@ -874,7 +887,6 @@
             <source key="sourceIdentifier" type="project" relativePath="./Classes/ExerciseViewController.h"/>
             <relationships>
                 <relationship kind="action" name="addExercise:"/>
-                <relationship kind="action" name="addSet:"/>
                 <relationship kind="action" name="loadProgram:"/>
                 <relationship kind="outlet" name="currentExerciseContainer" candidateClass="UIView"/>
                 <relationship kind="outlet" name="mainPanel" candidateClass="UIView"/>
